--- a/newIDE/app/src/UI/Theme/Global/Table.css
+++ b/newIDE/app/src/UI/Theme/Global/Table.css
@@ -33,7 +33,7 @@
 }
 .gd-table .tableHeaderColumn {
   text-transform: none;
-  font-weight: 600;
+  font-weight: 400;
   font-size: 12px;
   color: var(--table-text-color-header);
 }
